--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,5 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Setup git user
+        run: |
+          git config --global user.name "Intercreate"
+          git config --global user.email ic@n0t4d0m41n.1337
+
       - name: Configure & run tests
         run: cmake -B tests/build -S tests --log-level=NOTICE
