github: try fetching tags

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,7 +21,7 @@ jobs:
         run: |
           git config --global user.name "Intercreate"
           git config --global user.email ic@n0t4d0m41n.1337
-          git tag 0.0.0
+          git fetch --force --tags
 
       - name: Configure & run tests
         run: cmake -B tests/build -S tests --log-level=NOTICE
