--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,5 +24,5 @@ jobs:
 
       - name: Configure & run tests
         run: |
-          git fetch --force --tags
+          git fetch --prune --unshallow --tags
           cmake -B tests/build -S tests --log-level=NOTICE
