--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,8 +21,7 @@ jobs:
         run: |
           git config --global user.name "Intercreate"
           git config --global user.email ic@n0t4d0m41n.1337
+          git fetch --prune --unshallow --tags
 
       - name: Configure & run tests
-        run: |
-          git fetch --prune --unshallow --tags
-          cmake -B tests/build -S tests --log-level=NOTICE
+        run: cmake -B tests/build -S tests --log-level=NOTICE
