--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,12 +6,11 @@
 cmake_minimum_required(VERSION 3.20.0)
 project(test_ic_project)
 
-include(${CMAKE_SOURCE_DIR}/../ic.cmake)
-
-include(fetch_test_cmake.cmake)
+include(${CMAKE_CURRENT_LIST_DIR}/../dependencies/fetch_test_cmake.cmake)
 
 test_cmake_begin()
 
 include(test_ic_project.cmake)
+include(test_ic_bundle/minimal_args.cmake)
 
 test_cmake_end()
