--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,9 +30,9 @@ jobs:
           file: build/ic_cmake.zip
           tag: ${{ github.ref }}
 
-      - name: Add fetch_ic_cmake.cmake to release
+      - name: Add fetch_ic.cmake to release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: fetch_ic_cmake.cmake
+          file: fetch_ic.cmake
           tag: ${{ github.ref }}
